--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -2,12 +2,40 @@
 @import "subimport";
 @import "font";
 
+.justified.icon {
+  color: #fff;
+  position: relative;
+  align-self: center;
+  width: r(40);
+  height: r(10);
+  border-top: solid 1px currentColor;
+  border-bottom: solid 1px currentColor;
+}
+
+.justified.icon:before {
+  content: '';
+  position: absolute;
+  top: r(4);
+  left: 0;
+  width: r(40);
+  height: r(10);
+  border-top: solid 1px currentColor;
+  border-bottom: solid 1px currentColor;
+}
+
 
 .hidden {
   display: none;
 }
 .loading {
-  background: url('./assets/loading.svg') no-repeat center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white url('./assets/loading.svg') no-repeat center;
+  border-radius: r(10);
+  height: r(128);
+  width: r(128);
 }
 .center {
   display: flex;
@@ -15,7 +43,7 @@
   justify-content: center;
 }
 .router-link-active {
-  color: $primary-color-text;
+  color: $primary-text-color;
   background-color: $accent-color;
 }
 .one-line {
