--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -19,7 +19,7 @@ html {
 }
 body {
 	line-height:1;
-	color: $primary-color-light;
+	color: $primary-color-text;
 	background-color: $primary-color-light;
 	height:100%
 }
@@ -27,7 +27,8 @@ footer {
 	display:block
 }
 a {
-	text-decoration:none
+	text-decoration:none;
+	color: $primary-color-text;
 }
 img {
 	max-width:100%;
